--- a/UC8/profissional-crud/package.json
+++ b/UC8/profissional-crud/package.json
@@ -14,6 +14,8 @@
     "express": "^5.1.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9",
-    "pg": "^8.15.1"
+    "pg": "^8.15.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
